# shroom-setup-unpacker

./: .gitignore  Cargo.toml  Readme.md
src/: extract.rs  main.rs  patch.rs  patcher.rs  util.rs
src/setup/: is.rs  mod.rs  nfo300.rs  nsis.rs
